--- a/app/src/main/res/layout/fragment_add_meals.xml
+++ b/app/src/main/res/layout/fragment_add_meals.xml
@@ -5,6 +5,8 @@
     android:layout_height="match_parent"
     tools:context=".Fragment.AddMealsFragment"
     android:background="#ffffff">
+
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -19,6 +21,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
+
+
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="30dp"
@@ -26,6 +30,8 @@
                 android:layout_alignParentRight="true"
                 android:layout_below="@+id/actionBar"
                 android:background="#ffffff">
+
+
                 <TextView
                     android:id="@+id/textView9"
                     android:layout_width="wrap_content"
@@ -34,9 +40,9 @@
                     android:gravity="center"
                     android:paddingTop="5dp"
                     android:text="إضافة جدول غذائي للمتدرب"
-                    android:textColor="#232931"
-                    />
+                    android:textColor="#232931" />
             </RelativeLayout>
+
             <Spinner
                 android:id="@+id/selectUser"
                 android:layout_width="match_parent"
@@ -45,8 +51,8 @@
                 android:layout_marginLeft="25dp"
                 android:layout_marginRight="25dp"
                 android:layout_marginTop="15dp"
-                android:backgroundTint="@color/scifitBlue"
-                />
+                android:backgroundTint="@color/scifitBlue" />
+
             <Spinner
                 android:id="@+id/selectDay"
                 android:layout_width="match_parent"
@@ -56,6 +62,7 @@
                 android:layout_marginRight="25dp"
                 android:layout_marginTop="15dp"
                 android:backgroundTint="@color/scifitBlue" />
+
             <Spinner
                 android:id="@+id/selectMeal"
                 android:layout_width="match_parent"
@@ -66,6 +73,7 @@
                 android:layout_marginRight="25dp"
                 android:layout_marginTop="50dp"
                 android:backgroundTint="#ccc8c8" />
+
             <Spinner
                 android:id="@+id/selectMeal2"
                 android:layout_width="match_parent"
@@ -76,6 +84,7 @@
                 android:layout_marginRight="25dp"
                 android:layout_marginTop="15dp"
                 android:backgroundTint="#ccc8c8" />
+
             <Spinner
                 android:id="@+id/selectMeal3"
                 android:layout_width="match_parent"
@@ -95,6 +104,7 @@
                 android:layout_marginRight="25dp"
                 android:layout_marginTop="19dp"
                 android:backgroundTint="#ccc8c8" />
+
             <Spinner
                 android:id="@+id/selectMeal5"
                 android:layout_width="match_parent"
@@ -104,6 +114,7 @@
                 android:layout_marginRight="25dp"
                 android:layout_marginTop="15dp"
                 android:backgroundTint="#ccc8c8" />
+
             <Button
                 android:id="@+id/saveDayMeal"
                 android:layout_width="match_parent"
@@ -114,6 +125,7 @@
                 android:layout_toLeftOf="@+id/addMoreMeals2"
                 android:layout_toStartOf="@+id/addMoreMeals2"
                 android:text="حفظ الوجبات لليوم" />
+
             <Button
                 android:id="@+id/addMoreMeals2"
                 android:layout_width="102dp"
@@ -121,14 +133,15 @@
                 android:layout_marginBottom="250dp"
                 android:layout_marginLeft="150dp"
                 android:text="إضافة وجبة"></Button>
+
             <Button
                 android:id="@+id/addNewMeal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="250dp"
                 android:layout_marginLeft="150dp"
-                android:text="إضافة وجبة جديدة"
-                ></Button>
+                android:text="إضافة وجبة جديدة"></Button>
+
             <TextView
                 android:id="@+id/tvprofileGoal"
                 android:layout_width="wrap_content"
@@ -141,6 +154,7 @@
                 android:layout_marginRight="32dp"
                 android:text="TextView"
                 android:textSize="18sp" />
+
             <TextView
                 android:id="@+id/tvProfileName"
                 android:layout_width="wrap_content"
@@ -149,6 +163,7 @@
                 android:layout_alignParentBottom="true"
                 android:text="TextView"
                 android:textSize="18sp" />
+
             <TextView
                 android:id="@+id/tvProfileHeight"
                 android:layout_width="wrap_content"
@@ -157,6 +172,7 @@
                 android:layout_centerHorizontal="true"
                 android:text="TextView"
                 android:textSize="18sp" />
+
             <TextView
                 android:id="@+id/tvWeight"
                 android:layout_width="wrap_content"
@@ -165,6 +181,7 @@
                 android:layout_centerHorizontal="true"
                 android:text="TextView"
                 android:textSize="18sp" />
+
             <TextView
                 android:id="@+id/tvprofileActivity"
                 android:layout_width="wrap_content"
@@ -174,6 +191,7 @@
                 android:layout_below="@+id/tvprofileGoal"
                 android:text="TextView"
                 android:textSize="18sp" />
+
             <TextView
                 android:id="@+id/tvProfileAge"
                 android:layout_width="wrap_content"
@@ -182,6 +200,41 @@
                 android:layout_marginBottom="19dp"
                 android:text="TextView"
                 android:textSize="18sp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Make him admin"
+                android:textSize="24dp"/>
+
+            <RadioGroup
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_marginBottom="141dp"
+                android:orientation="horizontal">
+
+
+
+                <RadioButton
+                    android:id="@+id/radio_true"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="True"
+                    android:layout_marginLeft="50dp"
+                    android:textSize="18dp" />
+
+                <RadioButton
+                    android:id="@+id/radio_false"
+                    android:layout_marginLeft="135dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="False"
+                    android:textSize="18dp"/>
+            </RadioGroup>
+
         </LinearLayout>
     </ScrollView>
 </RelativeLayout>
