--- a/app/src/main/res/layout/activity_update_profile.xml
+++ b/app/src/main/res/layout/activity_update_profile.xml
@@ -83,7 +83,9 @@
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
             android:layout_marginEnd="12dp"
-            app:srcCompat="@drawable/ic_arrow_drop_down_black_24dp" />
+            app:srcCompat="@drawable/ic_arrow_drop_down_black_24dp"
+            android:layout_marginRight="12dp"
+            android:layout_alignParentRight="true" />
 
         <Spinner
             android:id="@+id/spinner4"
@@ -93,7 +95,8 @@
             android:layout_gravity="center"
             android:background="@android:color/transparent"
             android:gravity="center"
-            android:spinnerMode="dropdown" />
+            android:spinnerMode="dropdown"
+            android:layout_alignParentLeft="true" />
     </RelativeLayout>
 
     <RelativeLayout
@@ -117,7 +120,9 @@
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
             android:layout_marginEnd="12dp"
-            app:srcCompat="@drawable/ic_arrow_drop_down_black_24dp" />
+            app:srcCompat="@drawable/ic_arrow_drop_down_black_24dp"
+            android:layout_marginRight="12dp"
+            android:layout_alignParentRight="true" />
 
         <Spinner
             android:id="@+id/spinner"
@@ -127,7 +132,8 @@
             android:layout_gravity="center"
             android:background="@android:color/transparent"
             android:gravity="center"
-            android:spinnerMode="dropdown" />
+            android:spinnerMode="dropdown"
+            android:layout_alignParentLeft="true" />
     </RelativeLayout>
 
     <EditText
@@ -239,12 +245,29 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="27dp"
         android:layout_marginRight="27dp"
-        android:layout_marginTop="88dp"
+        android:layout_marginTop="32dp"
         android:backgroundTint="@color/scifitRed"
         android:fontFamily="@font/cairo_semibold"
         android:text="حفظ التغييرات"
-        android:textSize="17sp"
         android:textColor="#ffffff"
+        android:textSize="17sp"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/relaSpinner2" />
+
+    <Button
+        android:id="@+id/resetPass"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="27dp"
+        android:layout_marginRight="27dp"
+        android:layout_marginTop="100dp"
+        android:backgroundTint="@color/scifitRed"
+        android:fontFamily="@font/cairo_semibold"
+        android:text="اعادة تعيين كلمة المرور"
+        android:textColor="#ffffff"
+        android:textSize="17sp"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
