--- a/app/src/main/res/layout/activity_user_details.xml
+++ b/app/src/main/res/layout/activity_user_details.xml
@@ -115,7 +115,9 @@
                 android:layout_alignParentEnd="true"
                 android:layout_centerVertical="true"
                 android:layout_marginEnd="12dp"
-                app:srcCompat="@drawable/ic_arrow_drop_down_black_24dp" />
+                app:srcCompat="@drawable/ic_arrow_drop_down_black_24dp"
+                android:layout_marginRight="12dp"
+                android:layout_alignParentRight="true" />
 
             <Spinner
                 android:id="@+id/spinner2"
@@ -123,9 +125,9 @@
                 android:layout_height="match_parent"
                 android:layout_alignParentStart="true"
                 android:layout_gravity="center"
-                android:background="@android:color/transparent"
                 android:gravity="center"
-                android:spinnerMode="dropdown" />
+                android:spinnerMode="dropdown"
+                android:layout_alignParentLeft="true" />
         </RelativeLayout>
 
         <RelativeLayout
@@ -159,7 +161,6 @@
                 android:layout_height="match_parent"
                 android:layout_alignParentStart="true"
                 android:layout_gravity="center"
-                android:background="@android:color/transparent"
                 android:gravity="center"
                 android:spinnerMode="dropdown"
                 android:layout_alignParentLeft="true" />
