--- a/app/src/main/res/layout/days_adapter_exercise.xml
+++ b/app/src/main/res/layout/days_adapter_exercise.xml
@@ -12,6 +12,8 @@
         android:layout_height="72dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
+        android:layout_margin="5dp"
+        app:cardCornerRadius="15dp"
         android:layout_alignParentLeft="true">
 
         <RelativeLayout
