--- a/app/src/main/res/layout/meal_card_view.xml
+++ b/app/src/main/res/layout/meal_card_view.xml
@@ -4,45 +4,51 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#ededed">
+    android:background="@color/grey">
 
     <android.support.v7.widget.CardView
         android:id="@+id/cardView"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:layout_marginLeft="35dp"
-        android:layout_marginRight="35dp"
+        android:layout_marginLeft="25dp"
+        android:layout_marginRight="25dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="8dp" >
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent">
 
             <EditText
                 android:id="@+id/txtQuantity"
                 android:layout_width="74dp"
                 android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentRight="true"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:layout_marginStart="37dp"
+                android:background="@color/md_white_1000"
+                android:inputType="number"
                 android:layout_centerVertical="true"
-                android:layout_marginEnd="32dp"
-                android:layout_marginRight="32dp"
-                android:ems="10"
-                android:inputType="number" />
+                android:textColor="@color/blackGrey"
+                android:layout_alignParentLeft="true"
+                android:layout_marginLeft="37dp" />
 
             <EditText
                 android:id="@+id/txtIngr"
                 android:layout_width="156dp"
                 android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentTop="true"
+                android:layout_marginEnd="34dp"
+                android:background="@color/md_white_1000"
+
                 android:layout_centerVertical="true"
-                android:layout_marginLeft="32dp"
-                android:layout_marginStart="32dp"
-                android:ems="10"
-                android:inputType="textPersonName" />
+
+                android:inputType="textPersonName"
+                android:textColor="@color/blackGrey"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="34dp" />
         </RelativeLayout>
     </android.support.v7.widget.CardView>
 
