--- a/app/src/main/res/layout/meal_card_view_text_view.xml
+++ b/app/src/main/res/layout/meal_card_view_text_view.xml
@@ -10,11 +10,11 @@
         android:id="@+id/cardView"
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:layout_marginLeft="35dp"
-        android:layout_marginRight="35dp"
+        android:layout_marginLeft="25dp"
+        android:layout_marginRight="25dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="8dp" >
+        android:layout_marginTop="5dp" >
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -25,25 +25,28 @@
                 android:id="@+id/txtQuantity"
                 android:layout_width="74dp"
                 android:layout_height="match_parent"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
-                android:layout_marginEnd="32dp"
-                android:layout_marginRight="32dp"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:layout_marginStart="36dp"
                 android:ems="10"
-                android:inputType="number" />
+                android:layout_centerVertical="true"
+                android:inputType="number"
+                android:layout_alignParentLeft="true"
+                android:layout_marginLeft="36dp" />
 
             <TextView
                 android:id="@+id/txtIngr"
                 android:layout_width="156dp"
                 android:layout_height="match_parent"
-                android:layout_alignParentStart="true"
-                android:layout_centerVertical="true"
-                android:layout_marginStart="32dp"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentTop="true"
+                android:layout_marginEnd="37dp"
                 android:ems="10"
+                android:layout_centerVertical="true"
+
                 android:inputType="textPersonName"
-                android:layout_alignParentLeft="true"
-                android:layout_marginLeft="32dp" />
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="37dp" />
         </RelativeLayout>
     </android.support.v7.widget.CardView>
 
