--- a/app/src/main/res/layout/day_meals.xml
+++ b/app/src/main/res/layout/day_meals.xml
@@ -23,29 +23,26 @@
 
             <ImageView
                 android:id="@+id/calsCount"
-                android:layout_width="19dp"
+                android:layout_width="29dp"
                 android:layout_height="32dp"
+                android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
                 android:layout_centerVertical="true"
+                android:layout_marginLeft="100dp"
                 android:layout_marginStart="100dp"
-                app:srcCompat="@drawable/icons_meal_px"
-                android:layout_alignParentLeft="true"
-                android:layout_marginLeft="100dp" />
+                app:srcCompat="@drawable/icons_meal_px" />
 
             <ImageView
                 android:id="@+id/calsIcon"
-                android:layout_width="19dp"
-                android:layout_height="21dp"
-                android:layout_alignParentEnd="true"
+                android:layout_width="31dp"
+                android:layout_height="30dp"
                 android:layout_centerVertical="true"
-                android:layout_marginEnd="140dp"
-                app:srcCompat="@drawable/calories"
-                android:layout_alignParentRight="true"
-                android:layout_marginRight="140dp" />
+                android:layout_toStartOf="@+id/txtDay"
+                app:srcCompat="@drawable/calories" />
 
             <TextView
                 android:id="@+id/txtCount"
-                android:layout_width="78dp"
+                android:layout_width="95dp"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:layout_marginEnd="-93dp"
@@ -57,9 +54,11 @@
 
             <TextView
                 android:id="@+id/txtCals"
-                android:layout_width="52dp"
+                android:layout_width="102dp"
                 android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
+                android:layout_alignParentStart="true"
+                android:layout_centerVertical="true"
+                android:layout_marginStart="133dp"
                 android:text="السعرات"
                 android:textColor="#161616" />
 
@@ -76,15 +75,15 @@
 
             <TextView
                 android:id="@+id/txtDay"
-                android:layout_width="44dp"
+                android:layout_width="56dp"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
                 android:layout_marginEnd="68dp"
+                android:layout_marginRight="68dp"
                 android:text="يوم 1"
-                android:textColor="#161616"
-                android:layout_alignParentRight="true"
-                android:layout_marginRight="68dp" />
+                android:textColor="#161616" />
         </RelativeLayout>
     </android.support.v7.widget.CardView>
 
