--- a/app/src/main/res/layout/days_adapter_exercise.xml
+++ b/app/src/main/res/layout/days_adapter_exercise.xml
@@ -22,29 +22,29 @@
 
             <ImageView
                 android:id="@+id/workoutCount"
-                android:layout_width="19dp"
-                android:layout_height="32dp"
+                android:layout_width="32dp"
+                android:layout_height="39dp"
                 android:layout_alignParentStart="true"
                 android:layout_centerVertical="true"
-                android:layout_marginStart="120dp"
+                android:layout_marginStart="114dp"
                 app:srcCompat="@drawable/workoutcount" />
 
             <ImageView
                 android:id="@+id/calsIcon"
-                android:layout_width="19dp"
-                android:layout_height="21dp"
+                android:layout_width="32dp"
+                android:layout_height="39dp"
                 android:layout_alignParentEnd="true"
                 android:layout_centerVertical="true"
-                android:layout_marginEnd="153dp"
+                android:layout_marginEnd="131dp"
                 app:srcCompat="@drawable/mouscle" />
 
             <TextView
                 android:id="@+id/txtCount"
-                android:layout_width="78dp"
+                android:layout_width="113dp"
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
                 android:layout_centerVertical="true"
-                android:layout_marginStart="35dp"
+                android:layout_marginStart="0dp"
                 android:text="عدد التمارين"
                 android:textColor="@android:color/black" />
 
@@ -52,22 +52,25 @@
                 android:id="@+id/txtCals"
                 android:layout_width="52dp"
                 android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
+                android:layout_alignParentStart="true"
+                android:layout_centerVertical="true"
+                android:layout_marginStart="155dp"
+                android:gravity="center"
                 android:text="صدر"
                 tools:textColor="@android:color/black" />
 
             <ImageView
                 android:id="@+id/dayIcon"
-                android:layout_width="20dp"
-                android:layout_height="23dp"
+                android:layout_width="33dp"
+                android:layout_height="29dp"
                 android:layout_alignParentEnd="true"
                 android:layout_centerVertical="true"
-                android:layout_marginEnd="31dp"
+                android:layout_marginEnd="19dp"
                 app:srcCompat="@drawable/icons_calendar_px_" />
 
             <TextView
                 android:id="@+id/txtDay"
-                android:layout_width="44dp"
+                android:layout_width="64dp"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:layout_centerVertical="true"
