--- a/app/src/main/res/layout/fragment_add_meal_ing.xml
+++ b/app/src/main/res/layout/fragment_add_meal_ing.xml
@@ -86,8 +86,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="horizontal"
             android:background="@color/grey"
+            android:orientation="horizontal"
             android:weightSum="2">
 
             <Button
@@ -97,26 +97,26 @@
                 android:layout_alignParentBottom="true"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
-                android:layout_marginRight="5dp"
                 android:layout_marginLeft="25dp"
+                android:layout_marginRight="5dp"
                 android:layout_weight="1"
                 android:backgroundTint="@color/scifitRed"
-                android:textColor="@color/md_white_1000"
-                android:text="تحديث السعرات" />
+                android:text="تحديث السعرات"
+                android:textColor="@color/md_white_1000" />
 
             <Button
                 android:id="@+id/addNewIngBtn"
                 android:layout_width="wrap_content"
-                android:backgroundTint="@color/scifitRed"
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentRight="true"
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="25dp"
-                android:textColor="@color/md_white_1000"
                 android:layout_weight="1"
-                android:text="اضف صنف" />
+                android:backgroundTint="@color/scifitRed"
+                android:text="اضف صنف"
+                android:textColor="@color/md_white_1000" />
 
 
         </LinearLayout>
