--- a/app/src/main/res/layout/fragment_add_meals.xml
+++ b/app/src/main/res/layout/fragment_add_meals.xml
@@ -68,13 +68,13 @@
                     android:id="@+id/selectUser"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
-                    android:layout_marginRight="32dp"
                     android:layout_gravity="center"
-                    android:background="@color/transparent"
+                    android:layout_marginRight="32dp"
+                    android:background="#00000000"
                     android:gravity="center"
-                    android:spinnerMode="dropdown"
-                    android:layout_alignParentLeft="true" />
+                    android:spinnerMode="dropdown" />
             </RelativeLayout>
             <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
