--- a/app/src/main/res/layout/activity_add_new_exercise.xml
+++ b/app/src/main/res/layout/activity_add_new_exercise.xml
@@ -51,7 +51,7 @@
             android:id="@+id/imageViewNewEx"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:srcCompat="@drawable/header" />
+            android:background="@drawable/addpic"/>
     </android.support.v7.widget.CardView>
     <EditText
         android:id="@+id/txtExName"
