--- a/app/src/main/res/layout/activity_add_new_meal.xml
+++ b/app/src/main/res/layout/activity_add_new_meal.xml
@@ -58,7 +58,8 @@
             <ImageView
                 android:id="@+id/mealImg"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="match_parent"
+                android:background="@drawable/addpic"/>
 
         </android.support.v7.widget.CardView>
 
@@ -73,9 +74,10 @@
         android:layout_marginTop="227dp"
         android:background="@color/blackGrey"
         app:tabGravity="fill"
-        app:tabIndicatorColor="@color/md_white_1000"
+        app:tabSelectedTextColor="@color/md_white_1000"
+        app:tabIndicatorColor="#0f0f0f"
         app:tabMode="fixed"
-        app:tabTextColor="#dedcdc"
+        app:tabTextColor="#a39e9e"
         android:layout_alignParentLeft="true" />
 
     <android.support.v4.view.ViewPager
