--- a/app/src/main/res/layout/cardview_addworkout.xml
+++ b/app/src/main/res/layout/cardview_addworkout.xml
@@ -57,14 +57,13 @@
 
             <TextView
                 android:id="@+id/txtMu"
-                android:layout_width="wrap_content"
+                android:layout_width="120dp"
                 android:layout_height="30dp"
                 android:layout_alignParentBottom="true"
-                android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
-                android:layout_marginLeft="16dp"
-                android:layout_marginStart="16dp"
-                android:gravity="center_vertical"
+                android:layout_marginStart="38dp"
+                android:layout_centerVertical="true"
+                android:gravity="right"
                 android:text="العضلات المستهدفة" />
 
             <TextView
@@ -73,11 +72,12 @@
                 android:layout_height="29dp"
                 android:layout_alignParentBottom="true"
                 android:layout_alignParentEnd="true"
-                android:layout_marginEnd="86dp"
-                android:gravity="center_vertical"
+                android:layout_marginEnd="79dp"
+                android:layout_centerVertical="true"
+                android:gravity="right"
                 android:text="إسم التمرين"
                 android:layout_alignParentRight="true"
-                android:layout_marginRight="86dp" />
+                android:layout_marginRight="79dp" />
 
 
         </RelativeLayout>
