--- a/app/src/main/res/layout/fragment_add_meal_ing.xml
+++ b/app/src/main/res/layout/fragment_add_meal_ing.xml
@@ -58,7 +58,7 @@
                 android:layout_centerVertical="true"
                 android:layout_marginEnd="42dp"
                 android:layout_marginRight="42dp"
-                android:text="مجموع السعرات"
+                android:text="النوع"
                 android:textColor="#ffffff" />
 
             <TextView
