--- a/app/src/main/res/layout/fragment_add_workout2user.xml
+++ b/app/src/main/res/layout/fragment_add_workout2user.xml
@@ -14,8 +14,8 @@
         <RelativeLayout
             android:id="@+id/relative"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginBottom="13dp"
+            android:layout_height="35dp"
+            android:layout_marginBottom="8dp"
             android:background="@color/md_white_1000"
             app:layout_constraintBottom_toTopOf="@+id/spinnerUser"
             app:layout_constraintStart_toStartOf="parent"
@@ -61,7 +61,7 @@
                 android:layout_marginRight="32dp"
                 android:layout_gravity="center"
                 android:background="@color/transparent"
-                android:gravity="center"
+                android:gravity="right"
                 android:spinnerMode="dropdown"
                 android:layout_alignParentLeft="true" />
         </RelativeLayout>
@@ -95,68 +95,123 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/tvProfileName"
-                android:layout_width="wrap_content"
+                android:id="@+id/tvprofileActivity"
+                android:layout_width="35dp"
                 android:layout_height="30dp"
                 android:layout_alignParentBottom="true"
-                android:layout_marginEnd="7dp"
-                android:layout_marginRight="7dp"
+                android:layout_marginBottom="16dp"
+                android:layout_marginEnd="4dp"
+                android:layout_marginLeft="28dp"
+                android:layout_marginRight="4dp"
+                android:layout_marginStart="28dp"
                 android:layout_marginTop="16dp"
                 android:text="عالي"
                 android:textColor="@color/blackGrey"
                 android:textSize="14sp"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/imageView13"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tvprofileGoal" />
 
             <TextView
-                android:id="@+id/tvProfileHeight"
-                android:layout_width="wrap_content"
+                android:id="@+id/tvProfileAge"
+
+                android:layout_width="25dp"
                 android:layout_height="30dp"
                 android:layout_below="@+id/tvWeight"
                 android:layout_centerHorizontal="true"
-                android:layout_marginEnd="8dp"
-                android:layout_marginRight="8dp"
+                android:layout_marginEnd="4dp"
+                android:layout_marginRight="4dp"
                 android:layout_marginTop="16dp"
-                android:text="23 سنة"
+                android:gravity="center"
+                android:text="23"
                 android:textColor="@color/blackGrey"
-                android:textSize="14sp"
+                android:textSize="15sp"
                 app:layout_constraintEnd_toStartOf="@+id/imageView12"
-                app:layout_constraintTop_toBottomOf="@+id/tvprofileGoal" />
+                app:layout_constraintTop_toBottomOf="@+id/tvProfileName" />
 
             <TextView
-                android:id="@+id/tvWeight"
-                android:layout_width="wrap_content"
+                android:id="@+id/tvProfileAge2"
+
+                android:layout_width="28dp"
+                android:layout_height="30dp"
+                android:layout_below="@+id/tvWeight"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="18dp"
+                android:text="سنة"
+                android:textColor="@color/blackGrey"
+                android:textSize="13sp"
+                app:layout_constraintEnd_toStartOf="@+id/tvProfileAge"
+                app:layout_constraintTop_toBottomOf="@+id/tvProfileName" />
+
+            <TextView
+                android:id="@+id/tvProfileHeight"
+                android:layout_width="25dp"
                 android:layout_height="30dp"
                 android:layout_above="@+id/tvProfileAge"
                 android:layout_centerHorizontal="true"
                 android:layout_marginEnd="7dp"
                 android:layout_marginRight="7dp"
                 android:layout_marginTop="16dp"
-                android:text="181 سم"
+                android:gravity="center"
+                android:text="190"
                 android:textColor="@color/blackGrey"
-                android:textSize="14sp"
+                android:textSize="15sp"
                 app:layout_constraintEnd_toStartOf="@+id/imageView11"
-                app:layout_constraintTop_toBottomOf="@+id/tvProfileAge" />
+                app:layout_constraintTop_toBottomOf="@+id/tvProfileName" />
 
             <TextView
-                android:id="@+id/tvprofileActivity"
-                android:layout_width="40dp"
+                android:id="@+id/tvProfileHeight2"
+                android:layout_width="25dp"
+                android:layout_height="30dp"
+                android:layout_above="@+id/tvProfileAge"
+                android:layout_centerHorizontal="true"
+                android:layout_marginEnd="1dp"
+                android:layout_marginRight="1dp"
+                android:layout_marginTop="18dp"
+                android:text="سم"
+                android:textColor="@color/blackGrey"
+                android:textSize="13sp"
+                app:layout_constraintEnd_toStartOf="@+id/tvProfileHeight"
+                app:layout_constraintTop_toBottomOf="@+id/tvProfileName" />
+
+            <TextView
+                android:id="@+id/tvWeight"
+
+                android:layout_width="25dp"
                 android:layout_height="30dp"
                 android:layout_alignLeft="@+id/tvprofileGoal"
                 android:layout_alignStart="@+id/tvprofileGoal"
                 android:layout_below="@+id/tvprofileGoal"
-                android:layout_marginEnd="8dp"
-                android:layout_marginRight="8dp"
+                android:layout_marginEnd="4dp"
+                android:layout_marginRight="4dp"
                 android:layout_marginTop="16dp"
-                android:gravity="right"
-                android:text="72 كغ"
+                android:gravity="center"
+                android:text="72"
                 android:textColor="@color/blackGrey"
-                android:textSize="14sp"
+                android:textSize="15sp"
                 app:layout_constraintEnd_toStartOf="@+id/imageView10"
-                app:layout_constraintTop_toBottomOf="@+id/tvProfileAge" />
+                app:layout_constraintTop_toBottomOf="@+id/tvProfileName" />
 
             <TextView
-                android:id="@+id/tvProfileAge"
+                android:id="@+id/tvWeight2"
+
+                android:layout_width="20dp"
+                android:layout_height="30dp"
+                android:layout_alignLeft="@+id/tvprofileGoal"
+                android:layout_alignStart="@+id/tvprofileGoal"
+                android:layout_below="@+id/tvprofileGoal"
+                android:layout_marginTop="18dp"
+                android:gravity="right"
+                android:text="كغ"
+                android:textColor="@color/blackGrey"
+                android:textSize="13sp"
+                app:layout_constraintEnd_toStartOf="@+id/tvWeight"
+                app:layout_constraintTop_toBottomOf="@+id/tvProfileName" />
+
+            <TextView
+                android:id="@+id/tvProfileName"
+
                 android:layout_width="150dp"
                 android:layout_height="30dp"
                 android:layout_alignParentBottom="true"
@@ -196,33 +251,33 @@
                 android:id="@+id/imageView11"
                 android:layout_width="22dp"
                 android:layout_height="25dp"
-                android:layout_marginEnd="10dp"
-                android:layout_marginRight="10dp"
+                android:layout_marginEnd="4dp"
+                android:layout_marginRight="4dp"
                 android:layout_marginTop="16dp"
                 android:src="@drawable/text_height"
-                app:layout_constraintEnd_toStartOf="@+id/tvprofileActivity"
-                app:layout_constraintTop_toBottomOf="@+id/tvProfileAge" />
+                app:layout_constraintEnd_toStartOf="@+id/tvProfileAge2"
+                app:layout_constraintTop_toBottomOf="@+id/tvProfileName" />
 
             <ImageView
                 android:id="@+id/imageView12"
                 android:layout_width="22dp"
                 android:layout_height="25dp"
-                android:layout_marginEnd="8dp"
-                android:layout_marginRight="8dp"
+                android:layout_marginEnd="4dp"
+                android:layout_marginRight="4dp"
                 android:layout_marginTop="16dp"
                 android:src="@drawable/calendar_2"
-                app:layout_constraintEnd_toStartOf="@+id/tvWeight"
-                app:layout_constraintTop_toBottomOf="@+id/tvProfileAge" />
+                app:layout_constraintEnd_toStartOf="@+id/tvWeight2"
+                app:layout_constraintTop_toBottomOf="@+id/tvProfileName" />
 
             <ImageView
                 android:id="@+id/imageView13"
                 android:layout_width="22dp"
                 android:layout_height="25dp"
-                android:layout_marginEnd="8dp"
-                android:layout_marginRight="8dp"
+                android:layout_marginEnd="4dp"
+                android:layout_marginRight="4dp"
                 android:layout_marginTop="16dp"
                 android:src="@drawable/running"
-                app:layout_constraintEnd_toStartOf="@+id/tvProfileHeight"
+                app:layout_constraintEnd_toStartOf="@+id/tvProfileHeight2"
                 app:layout_constraintTop_toBottomOf="@+id/tvprofileGoal" />
 
             <ImageView
@@ -233,7 +288,7 @@
                 android:layout_marginRight="6dp"
                 android:layout_marginTop="8dp"
                 android:src="@drawable/trophy"
-                app:layout_constraintEnd_toStartOf="@+id/tvProfileAge"
+                app:layout_constraintEnd_toStartOf="@+id/tvProfileName"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
@@ -262,30 +317,30 @@
                 android:id="@+id/textView13"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="67dp"
-                android:layout_marginRight="67dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginRight="8dp"
                 android:text="الطول"
                 android:textSize="6sp"
-                app:layout_constraintEnd_toStartOf="@+id/textView12"
-                app:layout_constraintTop_toBottomOf="@+id/imageView11" />
+                app:layout_constraintEnd_toStartOf="@+id/tvWeight2"
+                app:layout_constraintTop_toBottomOf="@+id/imageView12" />
 
             <TextView
                 android:id="@+id/textView14"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="69dp"
-                android:layout_marginRight="69dp"
-                android:text="العمر"
+                android:layout_marginEnd="8dp"
+                android:layout_marginRight="8dp"
+                android:text="الطول"
                 android:textSize="6sp"
-                app:layout_constraintEnd_toStartOf="@+id/textView13"
-                app:layout_constraintTop_toBottomOf="@+id/imageView12" />
+                app:layout_constraintEnd_toStartOf="@+id/tvProfileAge2"
+                app:layout_constraintTop_toBottomOf="@+id/imageView11" />
 
             <TextView
                 android:id="@+id/textView15"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="69dp"
-                android:layout_marginRight="69dp"
+                android:layout_marginEnd="68dp"
+                android:layout_marginRight="68dp"
                 android:text="النشاط"
                 android:textSize="6sp"
                 app:layout_constraintEnd_toStartOf="@+id/textView14"
@@ -299,7 +354,7 @@
                 android:layout_marginRight="8dp"
                 android:text="الهدف"
                 android:textSize="6sp"
-                app:layout_constraintEnd_toStartOf="@+id/tvProfileAge"
+                app:layout_constraintEnd_toStartOf="@+id/tvProfileName"
                 app:layout_constraintTop_toBottomOf="@+id/imageView9" />
 
         </android.support.constraint.ConstraintLayout>
