--- a/app/src/main/res/layout/meal_card_view.xml
+++ b/app/src/main/res/layout/meal_card_view.xml
@@ -9,12 +9,11 @@
     <android.support.v7.widget.CardView
         android:id="@+id/cardView"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="40dp"
         android:layout_marginLeft="25dp"
         android:layout_marginRight="25dp"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="8dp" >
+        android:layout_marginTop="3dp" >
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -27,8 +26,9 @@
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
                 android:layout_marginStart="37dp"
-                android:background="@color/md_white_1000"
+                android:background="@drawable/custom_table_text"
                 android:inputType="number"
+                android:gravity="center"
                 android:layout_centerVertical="true"
                 android:textColor="@color/blackGrey"
                 android:layout_alignParentLeft="true"
@@ -41,8 +41,9 @@
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentTop="true"
                 android:layout_marginEnd="34dp"
-                android:background="@color/md_white_1000"
+                android:background="@drawable/custom_table_text"
 
+                android:gravity="center"
                 android:layout_centerVertical="true"
 
                 android:inputType="textPersonName"
