--- a/app/src/main/res/layout/meal_cardview_user.xml
+++ b/app/src/main/res/layout/meal_cardview_user.xml
@@ -29,6 +29,7 @@
                 android:layout_marginStart="41dp"
                 android:layout_marginTop="11dp"
                 android:ems="10"
+                android:layout_centerVertical="true"
                 android:inputType="number"
                 android:gravity="center"
                 android:layout_alignParentLeft="true"
@@ -36,17 +37,18 @@
 
             <TextView
                 android:id="@+id/txtIngr"
-                android:layout_width="127dp"
+                android:layout_width="152dp"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
                 android:layout_alignParentTop="true"
+                android:layout_centerVertical="true"
                 android:layout_marginEnd="28dp"
+                android:layout_marginRight="28dp"
                 android:layout_marginTop="11dp"
                 android:ems="10"
-                android:gravity="right"
-                android:inputType="textPersonName"
-                android:layout_alignParentRight="true"
-                android:layout_marginRight="28dp" />
+                android:gravity="center"
+                android:inputType="textPersonName" />
         </RelativeLayout>
     </android.support.v7.widget.CardView>
 
